--- a/zad07/pom.xml
+++ b/zad07/pom.xml
@@ -41,6 +41,12 @@
 			<version>8.0</version>
 			<scope>provided</scope>
 		</dependency>
+	<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.2.3</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>restejbjpademo</finalName>
